[gd_scene load_steps=3 format=3 uid="uid://7v1fcf4qi42l"]

[ext_resource type="Script" path="res://Scenes/ServeUI.gd" id="1"]
[ext_resource type="Theme" uid="uid://bgukpjan5jpl6" path="res://Scenes/PanelRoundEdges.tres" id="3"]

[node name="ServeUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="ServerInfo" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -470.51
offset_top = -283.899
offset_right = 479.49
offset_bottom = -99.8986
theme = ExtResource("3")

[node name="Label" type="Label" parent="ServerInfo"]
layout_mode = 0
offset_left = 22.0
offset_top = 13.0
offset_right = 522.0
offset_bottom = 50.0
text = "Name"

[node name="Label2" type="Label" parent="ServerInfo"]
layout_mode = 0
offset_left = 551.765
offset_top = 11.3181
offset_right = 1051.76
offset_bottom = 48.3181
text = "Favourite Colour: Fuchsia"

[node name="Label3" type="Label" parent="ServerInfo"]
layout_mode = 0
offset_left = 20.3182
offset_top = 51.681
offset_right = 520.318
offset_bottom = 88.681
text = "Serve Accuracy:"

[node name="Label4" type="Label" parent="ServerInfo"]
layout_mode = 0
offset_left = 27.0454
offset_top = 85.3169
offset_right = 527.045
offset_bottom = 122.317
text = "Power: "

[node name="Label5" type="Label" parent="ServerInfo"]
layout_mode = 0
offset_left = 35.4543
offset_top = 127.362
offset_right = 535.454
offset_bottom = 164.362
text = "Float: "

[node name="ServeTypeButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ServeTypeButtons"]
layout_mode = 0
offset_left = 1497.0
offset_top = 778.0
offset_right = 1927.0
offset_bottom = 1006.0

[node name="JumpServeButton" type="Button" parent="ServeTypeButtons/VBoxContainer"]
layout_mode = 2
text = "Topspin Jump Serve (1)"

[node name="FloatButton" type="Button" parent="ServeTypeButtons/VBoxContainer"]
layout_mode = 2
text = "Float Serve (2)"

[node name="UnderArmButton" type="Button" parent="ServeTypeButtons/VBoxContainer"]
layout_mode = 2
text = "Underarm Serve (3)"

[node name="ServeAggressionButtons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ServeAggressionButtons"]
layout_mode = 0
offset_left = 1497.0
offset_top = 900.0
offset_right = 1927.0
offset_bottom = 1082.0

[node name="AggressiveServe" type="Button" parent="ServeAggressionButtons/VBoxContainer"]
layout_mode = 2
text = "Aggressive Serve (1)"

[node name="ModerateServe" type="Button" parent="ServeAggressionButtons/VBoxContainer"]
layout_mode = 2
text = "Moderate Serve (2)"

[node name="SafetyServe" type="Button" parent="ServeAggressionButtons/VBoxContainer"]
layout_mode = 2
text = "Safety Serve (3)"

[node name="RememberServeOptions" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CheckBox" type="CheckBox" parent="RememberServeOptions"]
layout_mode = 0
offset_left = 1497.0
offset_top = 928.0
offset_right = 1927.0
offset_bottom = 979.0
text = "Remember Settings"
expand_icon = true

[node name="RepeatLastServe" type="Button" parent="RememberServeOptions"]
layout_mode = 0
offset_left = 1490.0
offset_top = 1023.0
offset_right = 1920.0
offset_bottom = 1081.0
text = "Repeat Last Serve (4)"

[connection signal="pressed" from="ServeTypeButtons/VBoxContainer/JumpServeButton" to="." method="_on_JumpServeButton_pressed"]
[connection signal="pressed" from="ServeTypeButtons/VBoxContainer/FloatButton" to="." method="_on_FloatButton_pressed"]
[connection signal="pressed" from="ServeTypeButtons/VBoxContainer/UnderArmButton" to="." method="_on_UnderArmButton_pressed"]
[connection signal="pressed" from="ServeAggressionButtons/VBoxContainer/AggressiveServe" to="." method="_on_AggressiveServe_pressed"]
[connection signal="pressed" from="ServeAggressionButtons/VBoxContainer/ModerateServe" to="." method="_on_ModerateServe_pressed"]
[connection signal="pressed" from="ServeAggressionButtons/VBoxContainer/SafetyServe" to="." method="_on_SafetyServe_pressed"]
[connection signal="toggled" from="RememberServeOptions/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="RememberServeOptions/RepeatLastServe" to="." method="_on_RepeatLastServe_pressed"]
